compiler/test/conformance/testdata/errors/26_annotation_nested_backtick.yz
`name: `foo``
s String

main: { print("ok") }
